2025-03-20 version 2025a
- kalman filter: fixes for variance of smoothed disturbances
  and some documentation updates
- "meantest" and "vartest" commands: support more options and
  expand their documentation
- "system" command, iterated variants: allow more iterations
  (now 250) before declaring non-convergence
- aggregate() function; speed improvement in the matrix case
- hyp2f1 function: enhance the documentation
- document the $pmanteau accessor for VARs
- GUI, preferences dialog: add a tab specifically for plot-
  related settings
- Fix bug: potential crash in the GUI when trying to forecast
  from an ARIMA model without a constant
- Fix bug: "dataset addobs n" with panel data (and without the
  --panel-time option) was not respecting the documented
  policy that 'n' refers to the number of cross-sectional
  units to be added to the dataset
- Fix bug: "mpols" was not respecting the --simple-print
  option, now it does
- Fix bug: the "join" command could overwrite some existing
  data with missing values (contrary to the documentation) in
  some cases
- Fix bug: the RESET test in the GUI was broken when the
  "show all variants" option was selected (since 2024c)
- Function packaging: fix to allow a plot-checker function to
  be private; documentation updates
- markdown parser: improve extraction of URLs
- minor code adjustments to comply with the C23 standard
- update sourceforge URLs to use https
- macOS builds: upgrade to GTK3
- macOS and 64-bit Windows: update gnuplot to version 6.0.2
- Windows 64-bit build: revert to use of MSVCRT rather then
  UCRT, pending analysis of some problems with the latter
- Windows 64-bit build: update to OpenBLAS 0.3.29; fixes for
  the Windows-10 theme

2024-12-12 version 2024d
- "append" command: make the help text more explicit
- "pca" command: make a $result bundle available
- "square" command and square() function: don't skip dummy
  variables when computing cross-products